fix: dark mode button, link color

--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,9 @@
   --sidebar-text: #999999;
   --sidebar-highlight: #eeeeee;
   --header-bg: #2a2a2a;
+   --main-link: #4da6ff;
+  --main-link-hover: #66ccff; 
   --main-divider: #555555;
-  --main-link: #88aaee;
-  --main-link-hover: #eeaa88;
 }
 
 /* ================================
